--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -39,135 +39,135 @@
     "message": "Über",
     "description": "About"
   },
-  "settingNameMouseButton": {
+  "settingLabelMouseButton": {
     "message": "Gesten Maustaste",
     "description": "Gesture mouse button"
   },
-  "settingNameMouseButtonLeft": {
+  "settingLabelMouseButtonLeft": {
     "message": "links",
     "description": "left"
   },
-  "settingNameMouseButtonRight": {
+  "settingLabelMouseButtonRight": {
     "message": "rechts",
     "description": "right"
   },
-  "settingNameMouseButtonMiddle": {
+  "settingLabelMouseButtonMiddle": {
     "message": "mitte",
     "description": "middle"
   },
-  "settingNameTimeoutActive": {
+  "settingLabelTimeoutActive": {
     "message": "Timeout der Geste",
     "description": "Gesture timeout"
   },
-  "settingNameTimeoutDuration": {
+  "settingLabelTimeoutDuration": {
     "message": "Dauer",
     "description": "Duration"
   },
-  "settingNameSuppressionKey": {
+  "settingLabelSuppressionKey": {
     "message": "Gesten Aufhebungs-Taste",
     "description": "Gesture suppression key"
   },
-  "settingNameNoneKey": {
+  "settingLabelNoneKey": {
     "message": "Keine",
     "description": "None"
   },
-  "settingNameAltKey": {
+  "settingLabelAltKey": {
     "message": "Alt",
     "description": "Alt"
   },
-  "settingNameCtrlKey": {
+  "settingLabelCtrlKey": {
     "message": "Strg",
     "description": "Ctrl"
   },
-  "settingNameShiftKey": {
+  "settingLabelShiftKey": {
     "message": "Shift",
     "description": "Shift"
   },
-  "settingNameAdvancedSettings": {
+  "settingLabelAdvancedSettings": {
     "message": "Erweiterte Einstellungen",
     "description": "Advanced settings"
   },
-  "settingNameDistanceThreshold": {
+  "settingLabelDistanceThreshold": {
     "message": "Gesten-Distanzschwelle",
     "description": "Gesture distance threshold"
   },
-  "settingNameDistanceSensitivity": {
+  "settingLabelDistanceSensitivity": {
     "message": "Gestenempfindlichkeit",
     "description": "Gesture sensitivity"
   },
-  "settingNameDisplayTrace": {
+  "settingLabelDisplayTrace": {
     "message": "Gesten Spur anzeigen",
     "description": "Display gesture trace"
   },
-  "settingNameTraceColor": {
+  "settingLabelTraceColor": {
     "message": "Linienfarbe",
     "description": "Line color"
   },
-  "settingNameTraceOpacity": {
+  "settingLabelTraceOpacity": {
     "message": "Transparenz",
     "description": "Opacity"
   },
-  "settingNameTraceWidth": {
+  "settingLabelTraceWidth": {
     "message": "Liniendicke",
     "description": "Line width"
   },
-  "settingNameTraceGrowth": {
+  "settingLabelTraceGrowth": {
     "message": "Linienwachstum",
     "description": "Line growth"
   },
-  "settingNameDisplayAction": {
+  "settingLabelDisplayAction": {
     "message": "Aktion anzeigen",
     "description": "Display action"
   },
-  "settingNameActionColor": {
+  "settingLabelActionColor": {
     "message": "Schriftfarbe",
     "description": "Font color"
   },
-  "settingNameActionBackgroundColor": {
+  "settingLabelActionBackgroundColor": {
     "message": "Hintergrundfarbe",
     "description": "Background color"
   },
-  "settingNameActionBackgroundOpacity": {
+  "settingLabelActionBackgroundOpacity": {
     "message": "Hintergrundtransparenz",
     "description": "Background opacity"
   },
-  "settingNameActionFontSize": {
+  "settingLabelActionFontSize": {
     "message": "Schriftgröße",
     "description": "Font size"
   },
-  "settingNameDisplayDirections": {
+  "settingLabelDisplayDirections": {
     "message": "Gesten-Richtungsangaben anzeigen",
     "description": "Display gesture directions"
   },
-  "settingNameDirectionsColor": {
+  "settingLabelDirectionsColor": {
     "message": "Schriftfarbe",
     "description": "Font color"
   },
-  "settingNameDirectionsBackgroundColor": {
+  "settingLabelDirectionsBackgroundColor": {
     "message": "Hintergrundfarbe",
     "description": "Background color"
   },
-  "settingNameDirectionsBackgroundOpacity": {
+  "settingLabelDirectionsBackgroundOpacity": {
     "message": "Hintergrundtransparenz",
     "description": "Background opacity"
   },
-  "settingNameDirectionsFontSize": {
+  "settingLabelDirectionsFontSize": {
     "message": "Schriftgröße",
     "description": "Font size"
   },
-  "settingNameDirectionsTextAlign": {
+  "settingLabelDirectionsTextAlign": {
     "message": "Textausrichtung",
     "description": "Text alignment"
   },
-  "settingNameDirectionsTextAlignLeft": {
+  "settingLabelDirectionsTextAlignLeft": {
     "message": "links",
     "description": "left"
   },
-  "settingNameDirectionsTextAlignRight": {
+  "settingLabelDirectionsTextAlignRight": {
     "message": "rechts",
     "description": "right"
   },
-  "settingNameDirectionsTextAlignCenter": {
+  "settingLabelDirectionsTextAlignCenter": {
     "message": "zentriert",
     "description": "center"
   },
@@ -231,79 +231,79 @@
     "message": "Akzeptiert einen Wert zwischen 0 (unsichtbar) und 1 (sichtbar).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
-  "settingNameRemoveTabFocus": {
+  "settingLabelRemoveTabFocus": {
     "message": "Tab fokussieren",
     "description": "Focus tab"
   },
-  "settingNameRemoveTabFocusDefault": {
+  "settingLabelRemoveTabFocusDefault": {
     "message": "Standard",
     "description": "default"
   },
-  "settingNameRemoveTabFocusPrevious": {
+  "settingLabelRemoveTabFocusPrevious": {
     "message": "Vorhergehender",
     "description": "previous"
   },
-  "settingNameRemoveTabFocusRight": {
+  "settingLabelRemoveTabFocusRight": {
     "message": "rechts",
     "description": "right"
   },
-  "settingNameRemoveTabFocusLeft": {
+  "settingLabelRemoveTabFocusLeft": {
     "message": "links",
     "description": "left"
   },
-  "settingNameNewTabPosition": {
+  "settingLabelNewTabPosition": {
     "message": "Tab Position",
     "description": "Tab position"
   },
-  "settingNameNewTabPositionDefault": {
+  "settingLabelNewTabPositionDefault": {
     "message": "Standard",
     "description": "default"
   },
-  "settingNameNewTabPositionBefore": {
+  "settingLabelNewTabPositionBefore": {
     "message": "Davor",
     "description": "before"
   },
-  "settingNameNewTabPositionAfter": {
+  "settingLabelNewTabPositionAfter": {
     "message": "Danach",
     "description": "after"
   },
-  "settingNameZoomStep": {
+  "settingLabelZoomStep": {
     "message": "Zoom-Schritt",
     "description": "Zoom step"
   },
-  "settingNameHomepageURL": {
+  "settingLabelHomepageURL": {
     "message": "Homepage URL",
     "description": "Homepage URL"
   },
-  "settingNameScrollDuration": {
+  "settingLabelScrollDuration": {
     "message": "Scroll-Dauer",
     "description": "Scroll duration"
   },
-  "settingNameNewTabOnEmptyLink": {
+  "settingLabelNewTabOnEmptyLink": {
     "message": "Öffne leeren Tab",
     "description": "Open empty tab"
   },
-  "settingNameFocusImageToTab": {
+  "settingLabelFocusImageToTab": {
     "message": "Fokussiert den geöffneten Bild-Tab",
     "description": "Focus opened image tab"
   },
-  "settingNameRemovePinnedTabs": {
+  "settingLabelRemovePinnedTabs": {
     "message": "Angepinnte Tabs entfernen",
     "description": "Remove pinned tabs"
   },
-  "settingNameSearchEngineURL": {
+  "settingLabelSearchEngineURL": {
     "message": "Suchmaschinen-URL",
     "description": "Search engine URL"
   },
-  "settingNameFocusSearchResult": {
+  "settingLabelFocusSearchResult": {
     "message": "Fokussiere Suchergebnis",
     "description": "Focus search result"
   },
-  "settingNamePromptSaveImageAs": {
+  "settingLabelPromptSaveImageAs": {
     "message": "Abfrage für Speichern als",
     "description": "Prompt Save As"
   },
-  "settingNameFirstTabIncludePinned": {
+  "settingLabelFirstTabIncludePinned": {
     "message": "Angepinnte Tabs mit einbeziehen",
     "description": "Include pinned tabs"
   },
@@ -363,255 +363,255 @@
     "message": "Es kann nur eine Geste pro Aktion verwendet werden. Die Kodierung der Gesten erfolgt mittels U - hoch, D - runter, R - rechts, L - links und kann nie zweimal die gleiche Richtung hintereinander, wie zum Beispiel RR, enthalten.",
     "description": "Only one gesture per action can be used. The gesture codes are composed of U - up, D - down, R - right, L - left and cannot contain the same direction twice in a row, as for example RR."
   },
-  "commandNameBookmark": {
+  "commandLabelBookmark": {
     "message": "Lesezeichen umschalten",
     "description": "Toggle bookmark"
   },
-  "commandNameDuplicate": {
+  "commandLabelDuplicate": {
     "message": "Tab duplizieren",
     "description": "Duplicate tab"
   },
-  "commandNameNewTab": {
+  "commandLabelNewTab": {
     "message": "Neuer Tab",
     "description": "New tab"
   },
-  "commandNameReload": {
+  "commandLabelReload": {
     "message": "Neu laden",
     "description": "Reload"
   },
-  "commandNameReloadCache": {
+  "commandLabelReloadCache": {
     "message": "Cache neu laden",
     "description": "Reload cache"
   },
-  "commandNameStopLoading": {
+  "commandLabelStopLoading": {
     "message": "Ladevorgang stoppen",
     "description": "Stop loading"
   },
-  "commandNameRemove": {
+  "commandLabelRemove": {
     "message": "Tab entfernen",
     "description": "Remove tab"
   },
-  "commandNameRestore": {
+  "commandLabelRestore": {
     "message": "Tab wiederherstellen",
     "description": "Restore tab"
   },
-  "commandNameZoomIn": {
+  "commandLabelZoomIn": {
     "message": "Zoom hinein",
     "description": "Zoom in"
   },
-  "commandNameZoomOut": {
+  "commandLabelZoomOut": {
     "message": "Zoom heraus",
     "description": "Zoom out"
   },
-  "commandNameZoomReset": {
+  "commandLabelZoomReset": {
     "message": "Zoom zurücksetzen",
     "description": "Zoom reset"
   },
-  "commandNameBack": {
+  "commandLabelBack": {
     "message": "Seite zurück",
     "description": "Page back"
   },
-  "commandNameForth": {
+  "commandLabelForth": {
     "message": "Seite vorwärts",
     "description": "Page forward"
   },
-  "commandNamePin": {
+  "commandLabelPin": {
     "message": "Angehefteten Tab umschalten",
     "description": "Toggle pinned tab"
   },
-  "commandNameMute": {
+  "commandLabelMute": {
     "message": "Stumm umschalten",
     "description": "Toggle mute"
   },
-  "commandNameScrollTop": {
+  "commandLabelScrollTop": {
     "message": "Zum Anfang scrollen",
     "description": "Scroll to the top"
   },
-  "commandNameScrollBottom": {
+  "commandLabelScrollBottom": {
     "message": "Zum Ende scrollen",
     "description": "Scroll to the bottom"
   },
-  "commandNameScrollPageDown": {
+  "commandLabelScrollPageDown": {
     "message": "Seitenweise runter scrollen",
     "description": "Scroll page down"
   },
-  "commandNameScrollPageUp": {
+  "commandLabelScrollPageUp": {
     "message": "Seitenweise hoch scrollen",
     "description": "Scroll page up"
   },
-  "commandNameNext": {
+  "commandLabelNext": {
     "message": "Nächster Tab",
     "description": "Next tab"
   },
-  "commandNamePrevious": {
+  "commandLabelPrevious": {
     "message": "Vorheriger Tab",
     "description": "Previous tab"
   },
-  "commandNameFirstTab": {
+  "commandLabelFirstTab": {
     "message": "Erster Tab",
     "description": "First tab"
   },
-  "commandNameLastTab": {
+  "commandLabelLastTab": {
     "message": "Letzter Tab",
     "description": "Last tab"
   },
-  "commandNamePreviousSelectedTab": {
+  "commandLabelPreviousSelectedTab": {
     "message": "Zuvor ausgewählter Tab",
     "description": "Previous selected tab"
   },
-  "commandNameMaximize": {
+  "commandLabelMaximize": {
     "message": "Fenster maximieren",
     "description": "Maximize window"
   },
-  "commandNameMinimize": {
+  "commandLabelMinimize": {
     "message": "Fenster minimieren",
     "description": "Minimize window"
   },
-  "commandNameToggleWindowSize": {
+  "commandLabelToggleWindowSize": {
     "message": "Fenstergröße umschalten",
     "description": "Toggle window size"
   },
-  "commandNameFullscreen": {
+  "commandLabelFullscreen": {
     "message": "Vollbild umschalten",
     "description": "Toggle full screen"
   },
-  "commandNameNewWindow": {
+  "commandLabelNewWindow": {
     "message": "Neues Fenster",
     "description": "New window"
   },
-  "commandNameNewPrivateWindow": {
+  "commandLabelNewPrivateWindow": {
     "message": "Neues privates Fenster",
     "description": "New private window"
   },
-  "commandNameTabToWindow": {
+  "commandLabelTabToWindow": {
     "message": "Tab zu Fenster",
     "description": "Tab to window"
   },
-  "commandNameCloseWindow": {
+  "commandLabelCloseWindow": {
     "message": "Fenster schließen",
     "description": "Close window"
   },
-  "commandNameReloadAll": {
+  "commandLabelReloadAll": {
     "message": "Alle neu laden",
     "description": "Reload all"
   },
-  "commandNameReloadAllCaches": {
+  "commandLabelReloadAllCaches": {
     "message": "Alle Caches neu laden",
     "description": "Reload all caches"
   },
-  "commandNameURLLevelUp": {
+  "commandLabelURLLevelUp": {
     "message": "URL-Hierarchie hoch",
     "description": "URL hierarchy up"
   },
-  "commandNameIncreaseURLNumber": {
+  "commandLabelIncreaseURLNumber": {
     "message": "URL-Zahl erhöhen",
     "description": "Increase URL number"
   },
-  "commandNameDecreaseURLNumber": {
+  "commandLabelDecreaseURLNumber": {
     "message": "URL-Zahl verringern",
     "description": "Decrease URL number"
   },
-  "commandNameImageToTab": {
+  "commandLabelImageToTab": {
     "message": "Bild zu Tab",
     "description": "Image to tab"
   },
-  "commandNameLinkToForegroundTab": {
+  "commandLabelLinkToForegroundTab": {
     "message": "Link zu Vordergrund Tab",
     "description": "Link to foreground tab"
   },
-  "commandNameLinkToBackgroundTab": {
+  "commandLabelLinkToBackgroundTab": {
     "message": "Link zu Hintergrund Tab",
     "description": "Link to background tab"
   },
-  "commandNameLinkToWindow": {
+  "commandLabelLinkToWindow": {
     "message": "Link zu Fenster",
     "description": "Link to window"
   },
-  "commandNameLinkToPrivateWindow": {
+  "commandLabelLinkToPrivateWindow": {
     "message": "Link zu privatem Fenster",
     "description": "Link to private window"
   },
-  "commandNameSearchSelection": {
+  "commandLabelSearchSelection": {
     "message": "Suche ausgewählten Text",
     "description": "Search selected text"
   },
-  "commandNameRemoveRight": {
+  "commandLabelRemoveRight": {
     "message": "Rechte Tabs schließen",
     "description": "Remove right tabs"
   },
-  "commandNameRemoveLeft": {
+  "commandLabelRemoveLeft": {
     "message": "Linke Tabs schließen",
     "description": "Remove left tabs"
   },
-  "commandNameRemoveOther": {
+  "commandLabelRemoveOther": {
     "message": "Andere Tabs schließen",
     "description": "Remove other tabs"
   },
-  "commandNameSaveAsPDF": {
+  "commandLabelSaveAsPDF": {
     "message": "Als PDF speichern",
     "description": "Save as PDF"
   },
-  "commandNameSaveImage": {
+  "commandLabelSaveImage": {
     "message": "Bild speichern",
     "description": "Save image"
   },
-  "commandNamePrint": {
+  "commandLabelPrint": {
     "message": "Drucken",
     "description": "Print"
   },
-  "commandNamePrintPreview": {
+  "commandLabelPrintPreview": {
     "message": "Druckvorschau",
     "description": "Print preview"
   },
-  "commandNameOpenHomepage": {
+  "commandLabelOpenHomepage": {
     "message": "Öffne Homepage",
     "description": "Open homepage"
   },
-  "commandNameOpenAddonSettings": {
+  "commandLabelOpenAddonSettings": {
     "message": "Einstellungen von Gesturefy öffnen",
     "description": "Open Gesturefy settings"
   },
-  "commandNameOpenLink": {
+  "commandLabelOpenLink": {
     "message": "Link öffnen",
     "description": "Open link"
   },
-  "commandNameOpenImage": {
+  "commandLabelOpenImage": {
     "message": "Bild öffnen",
     "description": "Open image"
   },
-  "commandNameLinkToBookmark": {
+  "commandLabelLinkToBookmark": {
     "message": "Link zu Lesezeichen",
     "description": "Link to bookmark"
   },
-  "commandNameSaveScreenshot": {
+  "commandLabelSaveScreenshot": {
     "message": "Screenshot speichern",
     "description": "Save screenshot"
   },
-  "commandNameCopyTabURL": {
+  "commandLabelCopyTabURL": {
     "message": "Tab URL kopieren",
     "description": "Copy tab URL"
   },
-  "commandNameCopyLinkURL": {
+  "commandLabelCopyLinkURL": {
     "message": "Link-URL kopieren",
     "description": "Copy link URL"
   },
-  "commandNameCopyTextSelection": {
+  "commandLabelCopyTextSelection": {
     "message": "Textauswahl kopieren",
     "description": "Copy text selection"
   },
-  "commandNameCopyImage": {
+  "commandLabelCopyImage": {
     "message": "Bild kopieren",
     "description": "Copy image"
   },
-  "commandNameViewPageSourceCode": {
+  "commandLabelViewPageSourceCode": {
     "message": "Quelltext anzeigen",
     "description": "View page source"
   },
-  "commandNamePopupAllTabs": {
+  "commandLabelPopupAllTabs": {
     "message": "[Popup] Alle Tabs",
     "description": "[Popup] All tabs"
   },
-  "commandNamePopupRecentlyClosedTabs": {
+  "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Kürzlich geschlossene Tabs",
     "description": "[Popup] Recently closed tabs"
   },
@@ -867,15 +867,15 @@
     "message": "Öffnet ein Popup mit einer Liste aller aktuell geöffneten Tabs und bietet die Möglichkeit, zu einem von ihnen zu wechseln.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
-  "extraNameRockerActive": {
+  "extraLabelRockerActive": {
     "message": "Rocker Geste",
     "description": "Rocker gesture"
   },
-  "extraNameRockerRightMouseClick": {
+  "extraLabelRockerRightMouseClick": {
     "message": "Rechter Mausklick",
     "description": "Right mouse click"
   },
-  "extraNameRockerLeftMouseClick": {
+  "extraLabelRockerLeftMouseClick": {
     "message": "Linker Mausklick",
     "description": "Left mouse click"
   },
@@ -883,19 +883,19 @@
     "message": "Diese Geste wird entweder durch Halten der rechten Maustaste und Klick auf die Linke, oder umgekehrt ausgeführt.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
-  "extraNameWheelActive": {
+  "extraLabelWheelActive": {
     "message": "Mausrad-Geste",
     "description": "Wheel gesture"
   },
-  "extraNameWheelMouseButton": {
+  "extraLabelWheelMouseButton": {
     "message": "Mausrad-Gesten Mausbutton",
     "description": "Wheel gesture mouse button"
   },
-  "extraNameWheelUp": {
+  "extraLabelWheelUp": {
     "message": "Mausrad hoch",
     "description": "Wheel up"
   },
-  "extraNameWheelDown": {
+  "extraLabelWheelDown": {
     "message": "Mausrad runter",
     "description": "Wheel down"
   },
