--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -39,135 +39,135 @@
     "message": "Info",
     "description": "About"
   },
-  "settingNameMouseButton": {
+  "settingLabelMouseButton": {
     "message": "Pulsante mouse del gesto",
     "description": "Gesture mouse button"
   },
-  "settingNameMouseButtonLeft": {
+  "settingLabelMouseButtonLeft": {
     "message": "sinistra",
     "description": "left"
   },
-  "settingNameMouseButtonRight": {
+  "settingLabelMouseButtonRight": {
     "message": "destra",
     "description": "right"
   },
-  "settingNameMouseButtonMiddle": {
+  "settingLabelMouseButtonMiddle": {
     "message": "centrale",
     "description": "middle"
   },
-  "settingNameTimeoutActive": {
+  "settingLabelTimeoutActive": {
     "message": "Intervallo del gesto",
     "description": "Gesture timeout"
   },
-  "settingNameTimeoutDuration": {
+  "settingLabelTimeoutDuration": {
     "message": "Durata",
     "description": "Duration"
   },
-  "settingNameSuppressionKey": {
+  "settingLabelSuppressionKey": {
     "message": "Tasto di soppressione del gesto",
     "description": "Gesture suppression key"
   },
-  "settingNameNoneKey": {
+  "settingLabelNoneKey": {
     "message": "Nessuno",
     "description": "None"
   },
-  "settingNameAltKey": {
+  "settingLabelAltKey": {
     "message": "Alt",
     "description": "Alt"
   },
-  "settingNameCtrlKey": {
+  "settingLabelCtrlKey": {
     "message": "Ctrl",
     "description": "Ctrl"
   },
-  "settingNameShiftKey": {
+  "settingLabelShiftKey": {
     "message": "Shift",
     "description": "Shift"
   },
-  "settingNameAdvancedSettings": {
+  "settingLabelAdvancedSettings": {
     "message": "Impostazioni avanzate",
     "description": "Advanced settings"
   },
-  "settingNameDistanceThreshold": {
+  "settingLabelDistanceThreshold": {
     "message": "Distanza limite del gesto",
     "description": "Gesture distance threshold"
   },
-  "settingNameDistanceSensitivity": {
+  "settingLabelDistanceSensitivity": {
     "message": "Sensibilità del gesto",
     "description": "Gesture sensitivity"
   },
-  "settingNameDisplayTrace": {
+  "settingLabelDisplayTrace": {
     "message": "Visualizza traccia del gesto",
     "description": "Display gesture trace"
   },
-  "settingNameTraceColor": {
+  "settingLabelTraceColor": {
     "message": "Colore linea",
     "description": "Line color"
   },
-  "settingNameTraceOpacity": {
+  "settingLabelTraceOpacity": {
     "message": "Opacità",
     "description": "Opacity"
   },
-  "settingNameTraceWidth": {
+  "settingLabelTraceWidth": {
     "message": "Spessore linea",
     "description": "Line width"
   },
-  "settingNameTraceGrowth": {
+  "settingLabelTraceGrowth": {
     "message": "Crescita linea",
     "description": "Line growth"
   },
-  "settingNameDisplayAction": {
+  "settingLabelDisplayAction": {
     "message": "Visualizza azione",
     "description": "Display action"
   },
-  "settingNameActionColor": {
+  "settingLabelActionColor": {
     "message": "Colore carattere",
     "description": "Font color"
   },
-  "settingNameActionBackgroundColor": {
+  "settingLabelActionBackgroundColor": {
     "message": "Colore di sfondo",
     "description": "Background color"
   },
-  "settingNameActionBackgroundOpacity": {
+  "settingLabelActionBackgroundOpacity": {
     "message": "Opacità sfondo",
     "description": "Background opacity"
   },
-  "settingNameActionFontSize": {
+  "settingLabelActionFontSize": {
     "message": "Dimensione carattere",
     "description": "Font size"
   },
-  "settingNameDisplayDirections": {
+  "settingLabelDisplayDirections": {
     "message": "Visualizza direzioni del gesto",
     "description": "Display gesture directions"
   },
-  "settingNameDirectionsColor": {
+  "settingLabelDirectionsColor": {
     "message": "Colore carattere",
     "description": "Font color"
   },
-  "settingNameDirectionsBackgroundColor": {
+  "settingLabelDirectionsBackgroundColor": {
     "message": "Colore di sfondo",
     "description": "Background color"
   },
-  "settingNameDirectionsBackgroundOpacity": {
+  "settingLabelDirectionsBackgroundOpacity": {
     "message": "Opacità sfondo",
     "description": "Background opacity"
   },
-  "settingNameDirectionsFontSize": {
+  "settingLabelDirectionsFontSize": {
     "message": "Dimensione carattere",
     "description": "Font size"
   },
-  "settingNameDirectionsTextAlign": {
+  "settingLabelDirectionsTextAlign": {
     "message": "Allineamento del testo",
     "description": "Text alignment"
   },
-  "settingNameDirectionsTextAlignLeft": {
+  "settingLabelDirectionsTextAlignLeft": {
     "message": "sinistra",
     "description": "left"
   },
-  "settingNameDirectionsTextAlignRight": {
+  "settingLabelDirectionsTextAlignRight": {
     "message": "destra",
     "description": "right"
   },
-  "settingNameDirectionsTextAlignCenter": {
+  "settingLabelDirectionsTextAlignCenter": {
     "message": "centro",
     "description": "center"
   },
@@ -231,79 +231,79 @@
     "message": "Accetta qualsiasi valore nell'intervallo 0 (invisibile) e 1 (visibile).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
-  "settingNameRemoveTabFocus": {
+  "settingLabelRemoveTabFocus": {
     "message": "Attiva scheda",
     "description": "Focus tab"
   },
-  "settingNameRemoveTabFocusDefault": {
+  "settingLabelRemoveTabFocusDefault": {
     "message": "predefinito",
     "description": "default"
   },
-  "settingNameRemoveTabFocusPrevious": {
+  "settingLabelRemoveTabFocusPrevious": {
     "message": "precedente",
     "description": "previous"
   },
-  "settingNameRemoveTabFocusRight": {
+  "settingLabelRemoveTabFocusRight": {
     "message": "destra",
     "description": "right"
   },
-  "settingNameRemoveTabFocusLeft": {
+  "settingLabelRemoveTabFocusLeft": {
     "message": "sinistra",
     "description": "left"
   },
-  "settingNameNewTabPosition": {
+  "settingLabelNewTabPosition": {
     "message": "Posizione scheda",
     "description": "Tab position"
   },
-  "settingNameNewTabPositionDefault": {
+  "settingLabelNewTabPositionDefault": {
     "message": "predefinito",
     "description": "default"
   },
-  "settingNameNewTabPositionBefore": {
+  "settingLabelNewTabPositionBefore": {
     "message": "prima",
     "description": "before"
   },
-  "settingNameNewTabPositionAfter": {
+  "settingLabelNewTabPositionAfter": {
     "message": "dopo",
     "description": "after"
   },
-  "settingNameZoomStep": {
+  "settingLabelZoomStep": {
     "message": "Unità di zoom",
     "description": "Zoom step"
   },
-  "settingNameHomepageURL": {
+  "settingLabelHomepageURL": {
     "message": "URL della pagina iniziale",
     "description": "Homepage URL"
   },
-  "settingNameScrollDuration": {
+  "settingLabelScrollDuration": {
     "message": "Durata dello scorrimento",
     "description": "Scroll duration"
   },
-  "settingNameNewTabOnEmptyLink": {
+  "settingLabelNewTabOnEmptyLink": {
     "message": "Apre la scheda vuota",
     "description": "Open empty tab"
   },
-  "settingNameFocusImageToTab": {
+  "settingLabelFocusImageToTab": {
     "message": "Stato attivo della scheda contenente l'immagine",
     "description": "Focus opened image tab"
   },
-  "settingNameRemovePinnedTabs": {
+  "settingLabelRemovePinnedTabs": {
     "message": "Rimuove le schede bloccate",
     "description": "Remove pinned tabs"
   },
-  "settingNameSearchEngineURL": {
+  "settingLabelSearchEngineURL": {
     "message": "URL del motore di ricerca",
     "description": "Search engine URL"
   },
-  "settingNameFocusSearchResult": {
+  "settingLabelFocusSearchResult": {
     "message": "Attiva risultato di ricerca",
     "description": "Focus search result"
   },
-  "settingNamePromptSaveImageAs": {
+  "settingLabelPromptSaveImageAs": {
     "message": "Richiedi Salva come",
     "description": "Prompt Save As"
   },
-  "settingNameFirstTabIncludePinned": {
+  "settingLabelFirstTabIncludePinned": {
     "message": "Includi schede bloccate",
     "description": "Include pinned tabs"
   },
@@ -363,255 +363,255 @@
     "message": "Un solo movimento per ogni azione può essere utilizzato. I codici del gesto sono composti da U - up, D R - - giù, destra, L - sinistra e non possono contenere la stessa direzione due volte di seguito, come per esempio RR.",
     "description": "Only one gesture per action can be used. The gesture codes are composed of U - up, D - down, R - right, L - left and cannot contain the same direction twice in a row, as for example RR."
   },
-  "commandNameBookmark": {
+  "commandLabelBookmark": {
     "message": "Attiva\/disattiva segnalibro",
     "description": "Toggle bookmark"
   },
-  "commandNameDuplicate": {
+  "commandLabelDuplicate": {
     "message": "Duplica scheda",
     "description": "Duplicate tab"
   },
-  "commandNameNewTab": {
+  "commandLabelNewTab": {
     "message": "Nuova scheda",
     "description": "New tab"
   },
-  "commandNameReload": {
+  "commandLabelReload": {
     "message": "Aggiorna",
     "description": "Reload"
   },
-  "commandNameReloadCache": {
+  "commandLabelReloadCache": {
     "message": "Ricarica la cache",
     "description": "Reload cache"
   },
-  "commandNameStopLoading": {
+  "commandLabelStopLoading": {
     "message": "Interrompe il caricamento",
     "description": "Stop loading"
   },
-  "commandNameRemove": {
+  "commandLabelRemove": {
     "message": "Rimuove scheda",
     "description": "Remove tab"
   },
-  "commandNameRestore": {
+  "commandLabelRestore": {
     "message": "Ripristina scheda",
     "description": "Restore tab"
   },
-  "commandNameZoomIn": {
+  "commandLabelZoomIn": {
     "message": "Zoom avanti",
     "description": "Zoom in"
   },
-  "commandNameZoomOut": {
+  "commandLabelZoomOut": {
     "message": "Zoom indietro",
     "description": "Zoom out"
   },
-  "commandNameZoomReset": {
+  "commandLabelZoomReset": {
     "message": "Reset zoom",
     "description": "Zoom reset"
   },
-  "commandNameBack": {
+  "commandLabelBack": {
     "message": "Pagina indietro",
     "description": "Page back"
   },
-  "commandNameForth": {
+  "commandLabelForth": {
     "message": "Pagina avanti",
     "description": "Page forward"
   },
-  "commandNamePin": {
+  "commandLabelPin": {
     "message": "Attiva\/disattiva scheda bloccata",
     "description": "Toggle pinned tab"
   },
-  "commandNameMute": {
+  "commandLabelMute": {
     "message": "Attiva\/disattiva audio",
     "description": "Toggle mute"
   },
-  "commandNameScrollTop": {
+  "commandLabelScrollTop": {
     "message": "Scorri in cima",
     "description": "Scroll to the top"
   },
-  "commandNameScrollBottom": {
+  "commandLabelScrollBottom": {
     "message": "Scorri in fondo",
     "description": "Scroll to the bottom"
   },
-  "commandNameScrollPageDown": {
+  "commandLabelScrollPageDown": {
     "message": "Scorri pagina verso il basso",
     "description": "Scroll page down"
   },
-  "commandNameScrollPageUp": {
+  "commandLabelScrollPageUp": {
     "message": "Scorri pagina verso l'alto",
     "description": "Scroll page up"
   },
-  "commandNameNext": {
+  "commandLabelNext": {
     "message": "Scheda successiva",
     "description": "Next tab"
   },
-  "commandNamePrevious": {
+  "commandLabelPrevious": {
     "message": "Scheda precedente",
     "description": "Previous tab"
   },
-  "commandNameFirstTab": {
+  "commandLabelFirstTab": {
     "message": "Prima scheda",
     "description": "First tab"
   },
-  "commandNameLastTab": {
+  "commandLabelLastTab": {
     "message": "Ultima scheda",
     "description": "Last tab"
   },
-  "commandNamePreviousSelectedTab": {
+  "commandLabelPreviousSelectedTab": {
     "message": "Scheda precedentemente selezionata",
     "description": "Previous selected tab"
   },
-  "commandNameMaximize": {
+  "commandLabelMaximize": {
     "message": "Ingrandisci la finestra",
     "description": "Maximize window"
   },
-  "commandNameMinimize": {
+  "commandLabelMinimize": {
     "message": "Minimizza finestra",
     "description": "Minimize window"
   },
-  "commandNameToggleWindowSize": {
+  "commandLabelToggleWindowSize": {
     "message": "Attiva\/disattiva dimensioni della finestra",
     "description": "Toggle window size"
   },
-  "commandNameFullscreen": {
+  "commandLabelFullscreen": {
     "message": "Attiva\/disattiva schermo intero",
     "description": "Toggle full screen"
   },
-  "commandNameNewWindow": {
+  "commandLabelNewWindow": {
     "message": "Nuova finestra",
     "description": "New window"
   },
-  "commandNameNewPrivateWindow": {
+  "commandLabelNewPrivateWindow": {
     "message": "Nuova finestra privata",
     "description": "New private window"
   },
-  "commandNameTabToWindow": {
+  "commandLabelTabToWindow": {
     "message": "Scheda in una finestra",
     "description": "Tab to window"
   },
-  "commandNameCloseWindow": {
+  "commandLabelCloseWindow": {
     "message": "Chiudi finestra",
     "description": "Close window"
   },
-  "commandNameReloadAll": {
+  "commandLabelReloadAll": {
     "message": "Ricarica tutto",
     "description": "Reload all"
   },
-  "commandNameReloadAllCaches": {
+  "commandLabelReloadAllCaches": {
     "message": "Ricarica tutte le cache",
     "description": "Reload all caches"
   },
-  "commandNameURLLevelUp": {
+  "commandLabelURLLevelUp": {
     "message": "URL del livello superiore",
     "description": "URL hierarchy up"
   },
-  "commandNameIncreaseURLNumber": {
+  "commandLabelIncreaseURLNumber": {
     "message": "Aumentare il numero di URL",
     "description": "Increase URL number"
   },
-  "commandNameDecreaseURLNumber": {
+  "commandLabelDecreaseURLNumber": {
     "message": "Diminuire il numero di URL",
     "description": "Decrease URL number"
   },
-  "commandNameImageToTab": {
+  "commandLabelImageToTab": {
     "message": "Immagine in una scheda",
     "description": "Image to tab"
   },
-  "commandNameLinkToForegroundTab": {
+  "commandLabelLinkToForegroundTab": {
     "message": "Link in una scheda in primo piano",
     "description": "Link to foreground tab"
   },
-  "commandNameLinkToBackgroundTab": {
+  "commandLabelLinkToBackgroundTab": {
     "message": "Link in una nuova scheda in secondo piano",
     "description": "Link to background tab"
   },
-  "commandNameLinkToWindow": {
+  "commandLabelLinkToWindow": {
     "message": "Link in una finestra",
     "description": "Link to window"
   },
-  "commandNameLinkToPrivateWindow": {
+  "commandLabelLinkToPrivateWindow": {
     "message": "Link a finestra privata",
     "description": "Link to private window"
   },
-  "commandNameSearchSelection": {
+  "commandLabelSearchSelection": {
     "message": "Cerca testo selezionato",
     "description": "Search selected text"
   },
-  "commandNameRemoveRight": {
+  "commandLabelRemoveRight": {
     "message": "Chiude le schede a destra",
     "description": "Remove right tabs"
   },
-  "commandNameRemoveLeft": {
+  "commandLabelRemoveLeft": {
     "message": "Chiude le schede a sinistra",
     "description": "Remove left tabs"
   },
-  "commandNameRemoveOther": {
+  "commandLabelRemoveOther": {
     "message": "Chiudi le altre schede",
     "description": "Remove other tabs"
   },
-  "commandNameSaveAsPDF": {
+  "commandLabelSaveAsPDF": {
     "message": "Salva come PDF",
     "description": "Save as PDF"
   },
-  "commandNameSaveImage": {
+  "commandLabelSaveImage": {
     "message": "Salva immagine",
     "description": "Save image"
   },
-  "commandNamePrint": {
+  "commandLabelPrint": {
     "message": "Stampa",
     "description": "Print"
   },
-  "commandNamePrintPreview": {
+  "commandLabelPrintPreview": {
     "message": "Anteprima di stampa",
     "description": "Print preview"
   },
-  "commandNameOpenHomepage": {
+  "commandLabelOpenHomepage": {
     "message": "Apri pagina iniziale",
     "description": "Open homepage"
   },
-  "commandNameOpenAddonSettings": {
+  "commandLabelOpenAddonSettings": {
     "message": "Apri impostazioni di Gesturefy",
     "description": "Open Gesturefy settings"
   },
-  "commandNameOpenLink": {
+  "commandLabelOpenLink": {
     "message": "Apri collegamento",
     "description": "Open link"
   },
-  "commandNameOpenImage": {
+  "commandLabelOpenImage": {
     "message": "Apri immagine",
     "description": "Open image"
   },
-  "commandNameLinkToBookmark": {
+  "commandLabelLinkToBookmark": {
     "message": "Vai al segnalibro",
     "description": "Link to bookmark"
   },
-  "commandNameSaveScreenshot": {
+  "commandLabelSaveScreenshot": {
     "message": "Salva la schermata",
     "description": "Save screenshot"
   },
-  "commandNameCopyTabURL": {
+  "commandLabelCopyTabURL": {
     "message": "Copia URL della pagina",
     "description": "Copy tab URL"
   },
-  "commandNameCopyLinkURL": {
+  "commandLabelCopyLinkURL": {
     "message": "Copia link URL",
     "description": "Copy link URL"
   },
-  "commandNameCopyTextSelection": {
+  "commandLabelCopyTextSelection": {
     "message": "Copia la selezione del testo",
     "description": "Copy text selection"
   },
-  "commandNameCopyImage": {
+  "commandLabelCopyImage": {
     "message": "Copia immagine",
     "description": "Copy image"
   },
-  "commandNameViewPageSourceCode": {
+  "commandLabelViewPageSourceCode": {
     "message": "Visualizza sorgente pagina",
     "description": "View page source"
   },
-  "commandNamePopupAllTabs": {
+  "commandLabelPopupAllTabs": {
     "message": "[Popup] Tutte le schede",
     "description": "[Popup] All tabs"
   },
-  "commandNamePopupRecentlyClosedTabs": {
+  "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Schede chiuse di recente",
     "description": "[Popup] Recently closed tabs"
   },
@@ -867,15 +867,15 @@
     "message": "Apre una finestra popup contenente un elenco di tutte le schede recentemente chiuse e offre la possibilità di riaprire una di queste.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
-  "extraNameRockerActive": {
+  "extraLabelRockerActive": {
     "message": "Gesto Rocker",
     "description": "Rocker gesture"
   },
-  "extraNameRockerRightMouseClick": {
+  "extraLabelRockerRightMouseClick": {
     "message": "Clic destro del mouse",
     "description": "Right mouse click"
   },
-  "extraNameRockerLeftMouseClick": {
+  "extraLabelRockerLeftMouseClick": {
     "message": "Clic sinistro del mouse",
     "description": "Left mouse click"
   },
@@ -883,19 +883,19 @@
     "message": "Questo gesto viene eseguito sia tenendo premuto il pulsante destro del mouse e cliccando sulla sinistra o viceversa.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
-  "extraNameWheelActive": {
+  "extraLabelWheelActive": {
     "message": "Gesto della rotella",
     "description": "Wheel gesture"
   },
-  "extraNameWheelMouseButton": {
+  "extraLabelWheelMouseButton": {
     "message": "Gesto pulsante della rotella del mouse",
     "description": "Wheel gesture mouse button"
   },
-  "extraNameWheelUp": {
+  "extraLabelWheelUp": {
     "message": "Movimento rotella in alto",
     "description": "Wheel up"
   },
-  "extraNameWheelDown": {
+  "extraLabelWheelDown": {
     "message": "Movimento rotella in basso",
     "description": "Wheel down"
   },
