--- a/src/_locales/ja_JP/messages.json
+++ b/src/_locales/ja_JP/messages.json
@@ -39,135 +39,135 @@
     "message": "情報",
     "description": "About"
   },
-  "settingNameMouseButton": {
+  "settingLabelMouseButton": {
     "message": "ジェスチャーに使用するマウスボタン",
     "description": "Gesture mouse button"
   },
-  "settingNameMouseButtonLeft": {
+  "settingLabelMouseButtonLeft": {
     "message": "左",
     "description": "left"
   },
-  "settingNameMouseButtonRight": {
+  "settingLabelMouseButtonRight": {
     "message": "右",
     "description": "right"
   },
-  "settingNameMouseButtonMiddle": {
+  "settingLabelMouseButtonMiddle": {
     "message": "中央",
     "description": "middle"
   },
-  "settingNameTimeoutActive": {
+  "settingLabelTimeoutActive": {
     "message": "ジェスチャーのタイムアウト",
     "description": "Gesture timeout"
   },
-  "settingNameTimeoutDuration": {
+  "settingLabelTimeoutDuration": {
     "message": "継続時間",
     "description": "Duration"
   },
-  "settingNameSuppressionKey": {
+  "settingLabelSuppressionKey": {
     "message": "ジェスチャー抑制キー",
     "description": "Gesture suppression key"
   },
-  "settingNameNoneKey": {
+  "settingLabelNoneKey": {
     "message": "なし",
     "description": "None"
   },
-  "settingNameAltKey": {
+  "settingLabelAltKey": {
     "message": "Alt",
     "description": "Alt"
   },
-  "settingNameCtrlKey": {
+  "settingLabelCtrlKey": {
     "message": "Ctrl",
     "description": "Ctrl"
   },
-  "settingNameShiftKey": {
+  "settingLabelShiftKey": {
     "message": "Shift",
     "description": "Shift"
   },
-  "settingNameAdvancedSettings": {
+  "settingLabelAdvancedSettings": {
     "message": "詳細設定",
     "description": "Advanced settings"
   },
-  "settingNameDistanceThreshold": {
+  "settingLabelDistanceThreshold": {
     "message": "ジェスチャー移動距離のしきい値",
     "description": "Gesture distance threshold"
   },
-  "settingNameDistanceSensitivity": {
+  "settingLabelDistanceSensitivity": {
     "message": "ジェスチャーの感度",
     "description": "Gesture sensitivity"
   },
-  "settingNameDisplayTrace": {
+  "settingLabelDisplayTrace": {
     "message": "ジェスチャーの軌跡を表示する",
     "description": "Display gesture trace"
   },
-  "settingNameTraceColor": {
+  "settingLabelTraceColor": {
     "message": "線の色",
     "description": "Line color"
   },
-  "settingNameTraceOpacity": {
+  "settingLabelTraceOpacity": {
     "message": "不透明度",
     "description": "Opacity"
   },
-  "settingNameTraceWidth": {
+  "settingLabelTraceWidth": {
     "message": "線の太さ",
     "description": "Line width"
   },
-  "settingNameTraceGrowth": {
+  "settingLabelTraceGrowth": {
     "message": "線の伸長",
     "description": "Line growth"
   },
-  "settingNameDisplayAction": {
+  "settingLabelDisplayAction": {
     "message": "アクションを表示する",
     "description": "Display action"
   },
-  "settingNameActionColor": {
+  "settingLabelActionColor": {
     "message": "フォントの色",
     "description": "Font color"
   },
-  "settingNameActionBackgroundColor": {
+  "settingLabelActionBackgroundColor": {
     "message": "背景の色",
     "description": "Background color"
   },
-  "settingNameActionBackgroundOpacity": {
+  "settingLabelActionBackgroundOpacity": {
     "message": "背景の不透明度",
     "description": "Background opacity"
   },
-  "settingNameActionFontSize": {
+  "settingLabelActionFontSize": {
     "message": "フォントサイズ",
     "description": "Font size"
   },
-  "settingNameDisplayDirections": {
+  "settingLabelDisplayDirections": {
     "message": "ジェスチャーの方向を表示する",
     "description": "Display gesture directions"
   },
-  "settingNameDirectionsColor": {
+  "settingLabelDirectionsColor": {
     "message": "フォントの色",
     "description": "Font color"
   },
-  "settingNameDirectionsBackgroundColor": {
+  "settingLabelDirectionsBackgroundColor": {
     "message": "背景の色",
     "description": "Background color"
   },
-  "settingNameDirectionsBackgroundOpacity": {
+  "settingLabelDirectionsBackgroundOpacity": {
     "message": "背景の不透明度",
     "description": "Background opacity"
   },
-  "settingNameDirectionsFontSize": {
+  "settingLabelDirectionsFontSize": {
     "message": "フォントサイズ",
     "description": "Font size"
   },
-  "settingNameDirectionsTextAlign": {
+  "settingLabelDirectionsTextAlign": {
     "message": "テキストの配置",
     "description": "Text alignment"
   },
-  "settingNameDirectionsTextAlignLeft": {
+  "settingLabelDirectionsTextAlignLeft": {
     "message": "左",
     "description": "left"
   },
-  "settingNameDirectionsTextAlignRight": {
+  "settingLabelDirectionsTextAlignRight": {
     "message": "右",
     "description": "right"
   },
-  "settingNameDirectionsTextAlignCenter": {
+  "settingLabelDirectionsTextAlignCenter": {
     "message": "中央",
     "description": "center"
   },
@@ -231,79 +231,79 @@
     "message": "0 (透明) から 1 (不透明) までの任意の値が有効です。",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
-  "settingNameRemoveTabFocus": {
+  "settingLabelRemoveTabFocus": {
     "message": "タブのフォーカス",
     "description": "Focus tab"
   },
-  "settingNameRemoveTabFocusDefault": {
+  "settingLabelRemoveTabFocusDefault": {
     "message": "デフォルト",
     "description": "default"
   },
-  "settingNameRemoveTabFocusPrevious": {
+  "settingLabelRemoveTabFocusPrevious": {
     "message": "以前のタブ",
     "description": "previous"
   },
-  "settingNameRemoveTabFocusRight": {
+  "settingLabelRemoveTabFocusRight": {
     "message": "右のタブ",
     "description": "right"
   },
-  "settingNameRemoveTabFocusLeft": {
+  "settingLabelRemoveTabFocusLeft": {
     "message": "左のタブ",
     "description": "left"
   },
-  "settingNameNewTabPosition": {
+  "settingLabelNewTabPosition": {
     "message": "タブの位置",
     "description": "Tab position"
   },
-  "settingNameNewTabPositionDefault": {
+  "settingLabelNewTabPositionDefault": {
     "message": "デフォルト",
     "description": "default"
   },
-  "settingNameNewTabPositionBefore": {
+  "settingLabelNewTabPositionBefore": {
     "message": "前",
     "description": "before"
   },
-  "settingNameNewTabPositionAfter": {
+  "settingLabelNewTabPositionAfter": {
     "message": "後",
     "description": "after"
   },
-  "settingNameZoomStep": {
+  "settingLabelZoomStep": {
     "message": "拡大\/縮小率",
     "description": "Zoom step"
   },
-  "settingNameHomepageURL": {
+  "settingLabelHomepageURL": {
     "message": "ホームページの URL",
     "description": "Homepage URL"
   },
-  "settingNameScrollDuration": {
+  "settingLabelScrollDuration": {
     "message": "スクロール時間",
     "description": "Scroll duration"
   },
-  "settingNameNewTabOnEmptyLink": {
+  "settingLabelNewTabOnEmptyLink": {
     "message": "空のタブを開く",
     "description": "Open empty tab"
   },
-  "settingNameFocusImageToTab": {
+  "settingLabelFocusImageToTab": {
     "message": "画像を開いたタブのフォーカス",
     "description": "Focus opened image tab"
   },
-  "settingNameRemovePinnedTabs": {
+  "settingLabelRemovePinnedTabs": {
     "message": "ピン留めされたタブを閉じる",
     "description": "Remove pinned tabs"
   },
-  "settingNameSearchEngineURL": {
+  "settingLabelSearchEngineURL": {
     "message": "検索エンジンの URL",
     "description": "Search engine URL"
   },
-  "settingNameFocusSearchResult": {
+  "settingLabelFocusSearchResult": {
     "message": "検索結果のフォーカス",
     "description": "Focus search result"
   },
-  "settingNamePromptSaveImageAs": {
+  "settingLabelPromptSaveImageAs": {
     "message": "保存先を指定",
     "description": "Prompt Save As"
   },
-  "settingNameFirstTabIncludePinned": {
+  "settingLabelFirstTabIncludePinned": {
     "message": "ピン留めされたタブを含める",
     "description": "Include pinned tabs"
   },
@@ -363,255 +363,255 @@
     "message": "アクションごとにジェスチャーを1つだけ割り当てることができます。ジェスチャーは U(上) D(下) L(左) R(右) で構成され、RR (右右) のように同じ方向を連続して含めることはできません。",
     "description": "Only one gesture per action can be used. The gesture codes are composed of U - up, D - down, R - right, L - left and cannot contain the same direction twice in a row, as for example RR."
   },
-  "commandNameBookmark": {
+  "commandLabelBookmark": {
     "message": "ブックマークを設定\/解除",
     "description": "Toggle bookmark"
   },
-  "commandNameDuplicate": {
+  "commandLabelDuplicate": {
     "message": "タブを複製",
     "description": "Duplicate tab"
   },
-  "commandNameNewTab": {
+  "commandLabelNewTab": {
     "message": "新しいタブ",
     "description": "New tab"
   },
-  "commandNameReload": {
+  "commandLabelReload": {
     "message": "再読み込み",
     "description": "Reload"
   },
-  "commandNameReloadCache": {
+  "commandLabelReloadCache": {
     "message": "キャッシュを再読み込み",
     "description": "Reload cache"
   },
-  "commandNameStopLoading": {
+  "commandLabelStopLoading": {
     "message": "読み込みを中止",
     "description": "Stop loading"
   },
-  "commandNameRemove": {
+  "commandLabelRemove": {
     "message": "タブを閉じる",
     "description": "Remove tab"
   },
-  "commandNameRestore": {
+  "commandLabelRestore": {
     "message": "タブを復元",
     "description": "Restore tab"
   },
-  "commandNameZoomIn": {
+  "commandLabelZoomIn": {
     "message": "ズームイン",
     "description": "Zoom in"
   },
-  "commandNameZoomOut": {
+  "commandLabelZoomOut": {
     "message": "ズームアウト",
     "description": "Zoom out"
   },
-  "commandNameZoomReset": {
+  "commandLabelZoomReset": {
     "message": "ズームをリセット",
     "description": "Zoom reset"
   },
-  "commandNameBack": {
+  "commandLabelBack": {
     "message": "ページを戻る",
     "description": "Page back"
   },
-  "commandNameForth": {
+  "commandLabelForth": {
     "message": "ページを進む",
     "description": "Page forward"
   },
-  "commandNamePin": {
+  "commandLabelPin": {
     "message": "タブのピン留めを切り替え",
     "description": "Toggle pinned tab"
   },
-  "commandNameMute": {
+  "commandLabelMute": {
     "message": "音声ミュートを切り替え",
     "description": "Toggle mute"
   },
-  "commandNameScrollTop": {
+  "commandLabelScrollTop": {
     "message": "上までスクロール",
     "description": "Scroll to the top"
   },
-  "commandNameScrollBottom": {
+  "commandLabelScrollBottom": {
     "message": "下までスクロール",
     "description": "Scroll to the bottom"
   },
-  "commandNameScrollPageDown": {
+  "commandLabelScrollPageDown": {
     "message": "ページを下へスクロール",
     "description": "Scroll page down"
   },
-  "commandNameScrollPageUp": {
+  "commandLabelScrollPageUp": {
     "message": "ページを上へスクロール",
     "description": "Scroll page up"
   },
-  "commandNameNext": {
+  "commandLabelNext": {
     "message": "次のタブ",
     "description": "Next tab"
   },
-  "commandNamePrevious": {
+  "commandLabelPrevious": {
     "message": "前のタブ",
     "description": "Previous tab"
   },
-  "commandNameFirstTab": {
+  "commandLabelFirstTab": {
     "message": "最初のタブ",
     "description": "First tab"
   },
-  "commandNameLastTab": {
+  "commandLabelLastTab": {
     "message": "最後のタブ",
     "description": "Last tab"
   },
-  "commandNamePreviousSelectedTab": {
+  "commandLabelPreviousSelectedTab": {
     "message": "前に選択していたタブ",
     "description": "Previous selected tab"
   },
-  "commandNameMaximize": {
+  "commandLabelMaximize": {
     "message": "ウィンドウを最大化",
     "description": "Maximize window"
   },
-  "commandNameMinimize": {
+  "commandLabelMinimize": {
     "message": "ウィンドウを最小化",
     "description": "Minimize window"
   },
-  "commandNameToggleWindowSize": {
+  "commandLabelToggleWindowSize": {
     "message": "ウィンドウサイズを切り替え",
     "description": "Toggle window size"
   },
-  "commandNameFullscreen": {
+  "commandLabelFullscreen": {
     "message": "フルスクリーンを切り替え",
     "description": "Toggle full screen"
   },
-  "commandNameNewWindow": {
+  "commandLabelNewWindow": {
     "message": "新しいウィンドウ",
     "description": "New window"
   },
-  "commandNameNewPrivateWindow": {
+  "commandLabelNewPrivateWindow": {
     "message": "新しいプライベートウィンドウ",
     "description": "New private window"
   },
-  "commandNameTabToWindow": {
+  "commandLabelTabToWindow": {
     "message": "タブをウィンドウで開く",
     "description": "Tab to window"
   },
-  "commandNameCloseWindow": {
+  "commandLabelCloseWindow": {
     "message": "ウィンドウを閉じる",
     "description": "Close window"
   },
-  "commandNameReloadAll": {
+  "commandLabelReloadAll": {
     "message": "すべて再読み込み",
     "description": "Reload all"
   },
-  "commandNameReloadAllCaches": {
+  "commandLabelReloadAllCaches": {
     "message": "すべてのキャッシュを再読み込み",
     "description": "Reload all caches"
   },
-  "commandNameURLLevelUp": {
+  "commandLabelURLLevelUp": {
     "message": "URL 階層を上る",
     "description": "URL hierarchy up"
   },
-  "commandNameIncreaseURLNumber": {
+  "commandLabelIncreaseURLNumber": {
     "message": "URL の数値を増やす",
     "description": "Increase URL number"
   },
-  "commandNameDecreaseURLNumber": {
+  "commandLabelDecreaseURLNumber": {
     "message": "URL の数値を減らす",
     "description": "Decrease URL number"
   },
-  "commandNameImageToTab": {
+  "commandLabelImageToTab": {
     "message": "画像をタブで開く",
     "description": "Image to tab"
   },
-  "commandNameLinkToForegroundTab": {
+  "commandLabelLinkToForegroundTab": {
     "message": "リンクをタブで開く",
     "description": "Link to foreground tab"
   },
-  "commandNameLinkToBackgroundTab": {
+  "commandLabelLinkToBackgroundTab": {
     "message": "リンクをバックグラウンドタブで開く",
     "description": "Link to background tab"
   },
-  "commandNameLinkToWindow": {
+  "commandLabelLinkToWindow": {
     "message": "リンクをウィンドウで開く",
     "description": "Link to window"
   },
-  "commandNameLinkToPrivateWindow": {
+  "commandLabelLinkToPrivateWindow": {
     "message": "リンクをプライベートウィンドウで開く",
     "description": "Link to private window"
   },
-  "commandNameSearchSelection": {
+  "commandLabelSearchSelection": {
     "message": "選択されたテキストを検索",
     "description": "Search selected text"
   },
-  "commandNameRemoveRight": {
+  "commandLabelRemoveRight": {
     "message": "右側のタブを閉じる",
     "description": "Remove right tabs"
   },
-  "commandNameRemoveLeft": {
+  "commandLabelRemoveLeft": {
     "message": "左側のタブを閉じる",
     "description": "Remove left tabs"
   },
-  "commandNameRemoveOther": {
+  "commandLabelRemoveOther": {
     "message": "他のタブを閉じる",
     "description": "Remove other tabs"
   },
-  "commandNameSaveAsPDF": {
+  "commandLabelSaveAsPDF": {
     "message": "PDF として保存",
     "description": "Save as PDF"
   },
-  "commandNameSaveImage": {
+  "commandLabelSaveImage": {
     "message": "画像を保存",
     "description": "Save image"
   },
-  "commandNamePrint": {
+  "commandLabelPrint": {
     "message": "印刷",
     "description": "Print"
   },
-  "commandNamePrintPreview": {
+  "commandLabelPrintPreview": {
     "message": "印刷プレビュー",
     "description": "Print preview"
   },
-  "commandNameOpenHomepage": {
+  "commandLabelOpenHomepage": {
     "message": "ホームページを開く",
     "description": "Open homepage"
   },
-  "commandNameOpenAddonSettings": {
+  "commandLabelOpenAddonSettings": {
     "message": "Gesturefy の設定を開く",
     "description": "Open Gesturefy settings"
   },
-  "commandNameOpenLink": {
+  "commandLabelOpenLink": {
     "message": "リンクを開く",
     "description": "Open link"
   },
-  "commandNameOpenImage": {
+  "commandLabelOpenImage": {
     "message": "画像を開く",
     "description": "Open image"
   },
-  "commandNameLinkToBookmark": {
+  "commandLabelLinkToBookmark": {
     "message": "リンクをブックマーク",
     "description": "Link to bookmark"
   },
-  "commandNameSaveScreenshot": {
+  "commandLabelSaveScreenshot": {
     "message": "スクリーンショットを保存",
     "description": "Save screenshot"
   },
-  "commandNameCopyTabURL": {
+  "commandLabelCopyTabURL": {
     "message": "タブの URL をコピー",
     "description": "Copy tab URL"
   },
-  "commandNameCopyLinkURL": {
+  "commandLabelCopyLinkURL": {
     "message": "リンクの URL をコピー",
     "description": "Copy link URL"
   },
-  "commandNameCopyTextSelection": {
+  "commandLabelCopyTextSelection": {
     "message": "選択範囲のテキストをコピー",
     "description": "Copy text selection"
   },
-  "commandNameCopyImage": {
+  "commandLabelCopyImage": {
     "message": "画像をコピー",
     "description": "Copy image"
   },
-  "commandNameViewPageSourceCode": {
+  "commandLabelViewPageSourceCode": {
     "message": "ページのソースを表示",
     "description": "View page source"
   },
-  "commandNamePopupAllTabs": {
+  "commandLabelPopupAllTabs": {
     "message": "[Popup] すべてのタブ",
     "description": "[Popup] All tabs"
   },
-  "commandNamePopupRecentlyClosedTabs": {
+  "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] 最近閉じたタブ",
     "description": "[Popup] Recently closed tabs"
   },
@@ -867,15 +867,15 @@
     "message": "最近閉じたタブの一覧を含むポップアップを表示して、その中の一つを復元することができます。",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
-  "extraNameRockerActive": {
+  "extraLabelRockerActive": {
     "message": "ロッカージェスチャー",
     "description": "Rocker gesture"
   },
-  "extraNameRockerRightMouseClick": {
+  "extraLabelRockerRightMouseClick": {
     "message": "左クリックした状態で右クリック",
     "description": "Right mouse click"
   },
-  "extraNameRockerLeftMouseClick": {
+  "extraLabelRockerLeftMouseClick": {
     "message": "右クリックした状態で左クリック",
     "description": "Left mouse click"
   },
@@ -883,19 +883,19 @@
     "message": "このジェスチャーは、マウスの右ボタンを押しながら左ボタンをクリックするか、もしくはその逆の動作で実行されます。",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
-  "extraNameWheelActive": {
+  "extraLabelWheelActive": {
     "message": "ホイールジェスチャー",
     "description": "Wheel gesture"
   },
-  "extraNameWheelMouseButton": {
+  "extraLabelWheelMouseButton": {
     "message": "ホイールジェスチャーに使用するマウスボタン",
     "description": "Wheel gesture mouse button"
   },
-  "extraNameWheelUp": {
+  "extraLabelWheelUp": {
     "message": "ホイールの上回転",
     "description": "Wheel up"
   },
-  "extraNameWheelDown": {
+  "extraLabelWheelDown": {
     "message": "ホイールの下回転",
     "description": "Wheel down"
   },
