--- a/src/_locales/pt_PT/messages.json
+++ b/src/_locales/pt_PT/messages.json
@@ -39,135 +39,135 @@
     "message": "Sobre",
     "description": "About"
   },
-  "settingNameMouseButton": {
+  "settingLabelMouseButton": {
     "message": "Botão de gesto",
     "description": "Gesture mouse button"
   },
-  "settingNameMouseButtonLeft": {
+  "settingLabelMouseButtonLeft": {
     "message": "botão esquerdo",
     "description": "left"
   },
-  "settingNameMouseButtonRight": {
+  "settingLabelMouseButtonRight": {
     "message": "botão direito",
     "description": "right"
   },
-  "settingNameMouseButtonMiddle": {
+  "settingLabelMouseButtonMiddle": {
     "message": "botão central",
     "description": "middle"
   },
-  "settingNameTimeoutActive": {
+  "settingLabelTimeoutActive": {
     "message": "Tempo limite do gesto",
     "description": "Gesture timeout"
   },
-  "settingNameTimeoutDuration": {
+  "settingLabelTimeoutDuration": {
     "message": "Duração",
     "description": "Duration"
   },
-  "settingNameSuppressionKey": {
+  "settingLabelSuppressionKey": {
     "message": "Tecla de supressão do gesto",
     "description": "Gesture suppression key"
   },
-  "settingNameNoneKey": {
+  "settingLabelNoneKey": {
     "message": "Nenhuma",
     "description": "None"
   },
-  "settingNameAltKey": {
+  "settingLabelAltKey": {
     "message": "Alt",
     "description": "Alt"
   },
-  "settingNameCtrlKey": {
+  "settingLabelCtrlKey": {
     "message": "Ctrl",
     "description": "Ctrl"
   },
-  "settingNameShiftKey": {
+  "settingLabelShiftKey": {
     "message": "Shift",
     "description": "Shift"
   },
-  "settingNameAdvancedSettings": {
+  "settingLabelAdvancedSettings": {
     "message": "Definições avançadas",
     "description": "Advanced settings"
   },
-  "settingNameDistanceThreshold": {
+  "settingLabelDistanceThreshold": {
     "message": "Limite de distância do gesto",
     "description": "Gesture distance threshold"
   },
-  "settingNameDistanceSensitivity": {
+  "settingLabelDistanceSensitivity": {
     "message": "Sensibilidade do gesto",
     "description": "Gesture sensitivity"
   },
-  "settingNameDisplayTrace": {
+  "settingLabelDisplayTrace": {
     "message": "Mostrar rasto do gesto",
     "description": "Display gesture trace"
   },
-  "settingNameTraceColor": {
+  "settingLabelTraceColor": {
     "message": "Cor do traço",
     "description": "Line color"
   },
-  "settingNameTraceOpacity": {
+  "settingLabelTraceOpacity": {
     "message": "Opacidade",
     "description": "Opacity"
   },
-  "settingNameTraceWidth": {
+  "settingLabelTraceWidth": {
     "message": "Espessura do traço",
     "description": "Line width"
   },
-  "settingNameTraceGrowth": {
+  "settingLabelTraceGrowth": {
     "message": "Crescimento da linha",
     "description": "Line growth"
   },
-  "settingNameDisplayAction": {
+  "settingLabelDisplayAction": {
     "message": "Mostrar ação",
     "description": "Display action"
   },
-  "settingNameActionColor": {
+  "settingLabelActionColor": {
     "message": "Cor do texto",
     "description": "Font color"
   },
-  "settingNameActionBackgroundColor": {
+  "settingLabelActionBackgroundColor": {
     "message": "Cor de fundo",
     "description": "Background color"
   },
-  "settingNameActionBackgroundOpacity": {
+  "settingLabelActionBackgroundOpacity": {
     "message": "Opacidade do fundo",
     "description": "Background opacity"
   },
-  "settingNameActionFontSize": {
+  "settingLabelActionFontSize": {
     "message": "Tamanho da letra",
     "description": "Font size"
   },
-  "settingNameDisplayDirections": {
+  "settingLabelDisplayDirections": {
     "message": "Mostrar direções do gesto",
     "description": "Display gesture directions"
   },
-  "settingNameDirectionsColor": {
+  "settingLabelDirectionsColor": {
     "message": "Cor do texto",
     "description": "Font color"
   },
-  "settingNameDirectionsBackgroundColor": {
+  "settingLabelDirectionsBackgroundColor": {
     "message": "Cor de fundo",
     "description": "Background color"
   },
-  "settingNameDirectionsBackgroundOpacity": {
+  "settingLabelDirectionsBackgroundOpacity": {
     "message": "Opacidade do fundo",
     "description": "Background opacity"
   },
-  "settingNameDirectionsFontSize": {
+  "settingLabelDirectionsFontSize": {
     "message": "Tamanho da letra",
     "description": "Font size"
   },
-  "settingNameDirectionsTextAlign": {
+  "settingLabelDirectionsTextAlign": {
     "message": "Alinhamento do texto",
     "description": "Text alignment"
   },
-  "settingNameDirectionsTextAlignLeft": {
+  "settingLabelDirectionsTextAlignLeft": {
     "message": "esquerda",
     "description": "left"
   },
-  "settingNameDirectionsTextAlignRight": {
+  "settingLabelDirectionsTextAlignRight": {
     "message": "direita",
     "description": "right"
   },
-  "settingNameDirectionsTextAlignCenter": {
+  "settingLabelDirectionsTextAlignCenter": {
     "message": "centro",
     "description": "center"
   },
@@ -231,79 +231,79 @@
     "message": "Suporta qualquer valor entre 0 (invisível) e 1 (visível).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
-  "settingNameRemoveTabFocus": {
+  "settingLabelRemoveTabFocus": {
     "message": "Separador com o foco",
     "description": "Focus tab"
   },
-  "settingNameRemoveTabFocusDefault": {
+  "settingLabelRemoveTabFocusDefault": {
     "message": "predefinição",
     "description": "default"
   },
-  "settingNameRemoveTabFocusPrevious": {
+  "settingLabelRemoveTabFocusPrevious": {
     "message": "anterior",
     "description": "previous"
   },
-  "settingNameRemoveTabFocusRight": {
+  "settingLabelRemoveTabFocusRight": {
     "message": "direita",
     "description": "right"
   },
-  "settingNameRemoveTabFocusLeft": {
+  "settingLabelRemoveTabFocusLeft": {
     "message": "esquerda",
     "description": "left"
   },
-  "settingNameNewTabPosition": {
+  "settingLabelNewTabPosition": {
     "message": "Posição do separador",
     "description": "Tab position"
   },
-  "settingNameNewTabPositionDefault": {
+  "settingLabelNewTabPositionDefault": {
     "message": "predefinição",
     "description": "default"
   },
-  "settingNameNewTabPositionBefore": {
+  "settingLabelNewTabPositionBefore": {
     "message": "antes",
     "description": "before"
   },
-  "settingNameNewTabPositionAfter": {
+  "settingLabelNewTabPositionAfter": {
     "message": "depois",
     "description": "after"
   },
-  "settingNameZoomStep": {
+  "settingLabelZoomStep": {
     "message": "Incremento de ampliação",
     "description": "Zoom step"
   },
-  "settingNameHomepageURL": {
+  "settingLabelHomepageURL": {
     "message": "URL da Pagina Inicial",
     "description": "Homepage URL"
   },
-  "settingNameScrollDuration": {
+  "settingLabelScrollDuration": {
     "message": "Duração do deslocamento",
     "description": "Scroll duration"
   },
-  "settingNameNewTabOnEmptyLink": {
+  "settingLabelNewTabOnEmptyLink": {
     "message": "Abrir separador vazio",
     "description": "Open empty tab"
   },
-  "settingNameFocusImageToTab": {
+  "settingLabelFocusImageToTab": {
     "message": "Focar separador da imagem aberta",
     "description": "Focus opened image tab"
   },
-  "settingNameRemovePinnedTabs": {
+  "settingLabelRemovePinnedTabs": {
     "message": "Fechar separadores fixos",
     "description": "Remove pinned tabs"
   },
-  "settingNameSearchEngineURL": {
+  "settingLabelSearchEngineURL": {
     "message": "Endereço do motor de pesquisa",
     "description": "Search engine URL"
   },
-  "settingNameFocusSearchResult": {
+  "settingLabelFocusSearchResult": {
     "message": "Focar resultado da pesquisa",
     "description": "Focus search result"
   },
-  "settingNamePromptSaveImageAs": {
+  "settingLabelPromptSaveImageAs": {
     "message": "Mostrar diálogo Salvar Como",
     "description": "Prompt Save As"
   },
-  "settingNameFirstTabIncludePinned": {
+  "settingLabelFirstTabIncludePinned": {
     "message": "Incluir separadores fixos",
     "description": "Include pinned tabs"
   },
@@ -363,255 +363,255 @@
     "message": "Apenas um único gesto poderá ser utilizado para cada ação. Os códigos de gesto são compostos por U (acima), D (abaixo), L (esquerda) e R (direita); o mesmo código não poderá ocorrer mais que uma vez consecutiva no mesmo gesto, como por exemplo RR.",
     "description": "Only one gesture per action can be used. The gesture codes are composed of U - up, D - down, R - right, L - left and cannot contain the same direction twice in a row, as for example RR."
   },
-  "commandNameBookmark": {
+  "commandLabelBookmark": {
     "message": "Alternar marcador",
     "description": "Toggle bookmark"
   },
-  "commandNameDuplicate": {
+  "commandLabelDuplicate": {
     "message": "Duplicar separador",
     "description": "Duplicate tab"
   },
-  "commandNameNewTab": {
+  "commandLabelNewTab": {
     "message": "Novo separador",
     "description": "New tab"
   },
-  "commandNameReload": {
+  "commandLabelReload": {
     "message": "Recarregar",
     "description": "Reload"
   },
-  "commandNameReloadCache": {
+  "commandLabelReloadCache": {
     "message": "Recarregar cache",
     "description": "Reload cache"
   },
-  "commandNameStopLoading": {
+  "commandLabelStopLoading": {
     "message": "Parar carregamento",
     "description": "Stop loading"
   },
-  "commandNameRemove": {
+  "commandLabelRemove": {
     "message": "Fechar separador",
     "description": "Remove tab"
   },
-  "commandNameRestore": {
+  "commandLabelRestore": {
     "message": "Restaurar separador",
     "description": "Restore tab"
   },
-  "commandNameZoomIn": {
+  "commandLabelZoomIn": {
     "message": "Ampliar",
     "description": "Zoom in"
   },
-  "commandNameZoomOut": {
+  "commandLabelZoomOut": {
     "message": "Afastar",
     "description": "Zoom out"
   },
-  "commandNameZoomReset": {
+  "commandLabelZoomReset": {
     "message": "Repor ampliação",
     "description": "Zoom reset"
   },
-  "commandNameBack": {
+  "commandLabelBack": {
     "message": "Retroceder página",
     "description": "Page back"
   },
-  "commandNameForth": {
+  "commandLabelForth": {
     "message": "Avançar página",
     "description": "Page forward"
   },
-  "commandNamePin": {
+  "commandLabelPin": {
     "message": "Alternar separador fixo",
     "description": "Toggle pinned tab"
   },
-  "commandNameMute": {
+  "commandLabelMute": {
     "message": "Alternar silêncio",
     "description": "Toggle mute"
   },
-  "commandNameScrollTop": {
+  "commandLabelScrollTop": {
     "message": "Deslocar para o topo",
     "description": "Scroll to the top"
   },
-  "commandNameScrollBottom": {
+  "commandLabelScrollBottom": {
     "message": "Deslocar para baixo",
     "description": "Scroll to the bottom"
   },
-  "commandNameScrollPageDown": {
+  "commandLabelScrollPageDown": {
     "message": "Deslocar página abaixo",
     "description": "Scroll page down"
   },
-  "commandNameScrollPageUp": {
+  "commandLabelScrollPageUp": {
     "message": "Deslocar página acima",
     "description": "Scroll page up"
   },
-  "commandNameNext": {
+  "commandLabelNext": {
     "message": "Próximo separador",
     "description": "Next tab"
   },
-  "commandNamePrevious": {
+  "commandLabelPrevious": {
     "message": "Separador anterior",
     "description": "Previous tab"
   },
-  "commandNameFirstTab": {
+  "commandLabelFirstTab": {
     "message": "Primeiro separador",
     "description": "First tab"
   },
-  "commandNameLastTab": {
+  "commandLabelLastTab": {
     "message": "Último separador",
     "description": "Last tab"
   },
-  "commandNamePreviousSelectedTab": {
+  "commandLabelPreviousSelectedTab": {
     "message": "Separador selecionado anterior",
     "description": "Previous selected tab"
   },
-  "commandNameMaximize": {
+  "commandLabelMaximize": {
     "message": "Maximizar janela",
     "description": "Maximize window"
   },
-  "commandNameMinimize": {
+  "commandLabelMinimize": {
     "message": "Minimizar janela",
     "description": "Minimize window"
   },
-  "commandNameToggleWindowSize": {
+  "commandLabelToggleWindowSize": {
     "message": "Alternar tamanho da janela",
     "description": "Toggle window size"
   },
-  "commandNameFullscreen": {
+  "commandLabelFullscreen": {
     "message": "Alternar ecrã inteiro",
     "description": "Toggle full screen"
   },
-  "commandNameNewWindow": {
+  "commandLabelNewWindow": {
     "message": "Nova janela",
     "description": "New window"
   },
-  "commandNameNewPrivateWindow": {
+  "commandLabelNewPrivateWindow": {
     "message": "Nova janela privada",
     "description": "New private window"
   },
-  "commandNameTabToWindow": {
+  "commandLabelTabToWindow": {
     "message": "Mover separador para janela",
     "description": "Tab to window"
   },
-  "commandNameCloseWindow": {
+  "commandLabelCloseWindow": {
     "message": "Fechar janela",
     "description": "Close window"
   },
-  "commandNameReloadAll": {
+  "commandLabelReloadAll": {
     "message": "Recarregar tudo",
     "description": "Reload all"
   },
-  "commandNameReloadAllCaches": {
+  "commandLabelReloadAllCaches": {
     "message": "Recarregar todas as caches",
     "description": "Reload all caches"
   },
-  "commandNameURLLevelUp": {
+  "commandLabelURLLevelUp": {
     "message": "Hierarquia do URL acima",
     "description": "URL hierarchy up"
   },
-  "commandNameIncreaseURLNumber": {
+  "commandLabelIncreaseURLNumber": {
     "message": "Aumentar número no URL",
     "description": "Increase URL number"
   },
-  "commandNameDecreaseURLNumber": {
+  "commandLabelDecreaseURLNumber": {
     "message": "Reduzir número no URL",
     "description": "Decrease URL number"
   },
-  "commandNameImageToTab": {
+  "commandLabelImageToTab": {
     "message": "Imagem para separador",
     "description": "Image to tab"
   },
-  "commandNameLinkToForegroundTab": {
+  "commandLabelLinkToForegroundTab": {
     "message": "Ligação para separador na frente",
     "description": "Link to foreground tab"
   },
-  "commandNameLinkToBackgroundTab": {
+  "commandLabelLinkToBackgroundTab": {
     "message": "Ligação para separador no fundo",
     "description": "Link to background tab"
   },
-  "commandNameLinkToWindow": {
+  "commandLabelLinkToWindow": {
     "message": "Ligação para janela",
     "description": "Link to window"
   },
-  "commandNameLinkToPrivateWindow": {
+  "commandLabelLinkToPrivateWindow": {
     "message": "Ligação para janela privada",
     "description": "Link to private window"
   },
-  "commandNameSearchSelection": {
+  "commandLabelSearchSelection": {
     "message": "Pesquisar o texto selecionado",
     "description": "Search selected text"
   },
-  "commandNameRemoveRight": {
+  "commandLabelRemoveRight": {
     "message": "Fechar separadores à direita",
     "description": "Remove right tabs"
   },
-  "commandNameRemoveLeft": {
+  "commandLabelRemoveLeft": {
     "message": "Fechar separadores à esquerda",
     "description": "Remove left tabs"
   },
-  "commandNameRemoveOther": {
+  "commandLabelRemoveOther": {
     "message": "Fechar os outros separadores",
     "description": "Remove other tabs"
   },
-  "commandNameSaveAsPDF": {
+  "commandLabelSaveAsPDF": {
     "message": "Guardar como PDF",
     "description": "Save as PDF"
   },
-  "commandNameSaveImage": {
+  "commandLabelSaveImage": {
     "message": "Guardar imagem",
     "description": "Save image"
   },
-  "commandNamePrint": {
+  "commandLabelPrint": {
     "message": "Imprimir",
     "description": "Print"
   },
-  "commandNamePrintPreview": {
+  "commandLabelPrintPreview": {
     "message": "Previsualizar impressão",
     "description": "Print preview"
   },
-  "commandNameOpenHomepage": {
+  "commandLabelOpenHomepage": {
     "message": "Abrir página inicial",
     "description": "Open homepage"
   },
-  "commandNameOpenAddonSettings": {
+  "commandLabelOpenAddonSettings": {
     "message": "Abrir definições do Gesturify",
     "description": "Open Gesturefy settings"
   },
-  "commandNameOpenLink": {
+  "commandLabelOpenLink": {
     "message": "Abrir ligação",
     "description": "Open link"
   },
-  "commandNameOpenImage": {
+  "commandLabelOpenImage": {
     "message": "Abrir imagem",
     "description": "Open image"
   },
-  "commandNameLinkToBookmark": {
+  "commandLabelLinkToBookmark": {
     "message": "Ligação para marcador",
     "description": "Link to bookmark"
   },
-  "commandNameSaveScreenshot": {
+  "commandLabelSaveScreenshot": {
     "message": "Salvar captura de ecrã",
     "description": "Save screenshot"
   },
-  "commandNameCopyTabURL": {
+  "commandLabelCopyTabURL": {
     "message": "Copiar URL do separador",
     "description": "Copy tab URL"
   },
-  "commandNameCopyLinkURL": {
+  "commandLabelCopyLinkURL": {
     "message": "Copiar URL da ligação",
     "description": "Copy link URL"
   },
-  "commandNameCopyTextSelection": {
+  "commandLabelCopyTextSelection": {
     "message": "Copiar texto selecionado",
     "description": "Copy text selection"
   },
-  "commandNameCopyImage": {
+  "commandLabelCopyImage": {
     "message": "Copiar imagem",
     "description": "Copy image"
   },
-  "commandNameViewPageSourceCode": {
+  "commandLabelViewPageSourceCode": {
     "message": "Visualizar o código-fonte da página",
     "description": "View page source"
   },
-  "commandNamePopupAllTabs": {
+  "commandLabelPopupAllTabs": {
     "message": "[Popup] Todos os separadores",
     "description": "[Popup] All tabs"
   },
-  "commandNamePopupRecentlyClosedTabs": {
+  "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Separadores fechados recentemente",
     "description": "[Popup] Recently closed tabs"
   },
@@ -867,15 +867,15 @@
     "message": "Abre um pop-up contendo uma lista de todos os separadores fechados recentemente e permite restaurar um deles.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
-  "extraNameRockerActive": {
+  "extraLabelRockerActive": {
     "message": "Gesto Rocker",
     "description": "Rocker gesture"
   },
-  "extraNameRockerRightMouseClick": {
+  "extraLabelRockerRightMouseClick": {
     "message": "Clique direito",
     "description": "Right mouse click"
   },
-  "extraNameRockerLeftMouseClick": {
+  "extraLabelRockerLeftMouseClick": {
     "message": "Clique esquerdo",
     "description": "Left mouse click"
   },
@@ -883,19 +883,19 @@
     "message": "Este gesto é executado segurando o botão direito do rato e clicando o botão esquerdo ou vice-versa.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
-  "extraNameWheelActive": {
+  "extraLabelWheelActive": {
     "message": "Gesto da roda",
     "description": "Wheel gesture"
   },
-  "extraNameWheelMouseButton": {
+  "extraLabelWheelMouseButton": {
     "message": "Gesto do botão central",
     "description": "Wheel gesture mouse button"
   },
-  "extraNameWheelUp": {
+  "extraLabelWheelUp": {
     "message": "Roda acima",
     "description": "Wheel up"
   },
-  "extraNameWheelDown": {
+  "extraLabelWheelDown": {
     "message": "Roda abaixo",
     "description": "Wheel down"
   },
