--- a/src/_locales/sv_SE/messages.json
+++ b/src/_locales/sv_SE/messages.json
@@ -39,135 +39,135 @@
     "message": "Om",
     "description": "About"
   },
-  "settingNameMouseButton": {
+  "settingLabelMouseButton": {
     "message": "Rörelsemusknapp",
     "description": "Gesture mouse button"
   },
-  "settingNameMouseButtonLeft": {
+  "settingLabelMouseButtonLeft": {
     "message": "vänster",
     "description": "left"
   },
-  "settingNameMouseButtonRight": {
+  "settingLabelMouseButtonRight": {
     "message": "höger",
     "description": "right"
   },
-  "settingNameMouseButtonMiddle": {
+  "settingLabelMouseButtonMiddle": {
     "message": "mitten",
     "description": "middle"
   },
-  "settingNameTimeoutActive": {
+  "settingLabelTimeoutActive": {
     "message": "Rörelsetimeout",
     "description": "Gesture timeout"
   },
-  "settingNameTimeoutDuration": {
+  "settingLabelTimeoutDuration": {
     "message": "Varaktighet",
     "description": "Duration"
   },
-  "settingNameSuppressionKey": {
+  "settingLabelSuppressionKey": {
     "message": "Rörelseavbrytningstangent",
     "description": "Gesture suppression key"
   },
-  "settingNameNoneKey": {
+  "settingLabelNoneKey": {
     "message": "Ingen",
     "description": "None"
   },
-  "settingNameAltKey": {
+  "settingLabelAltKey": {
     "message": "Alt",
     "description": "Alt"
   },
-  "settingNameCtrlKey": {
+  "settingLabelCtrlKey": {
     "message": "Ctrl",
     "description": "Ctrl"
   },
-  "settingNameShiftKey": {
+  "settingLabelShiftKey": {
     "message": "Skift",
     "description": "Shift"
   },
-  "settingNameAdvancedSettings": {
+  "settingLabelAdvancedSettings": {
     "message": "Avancerade inställningar",
     "description": "Advanced settings"
   },
-  "settingNameDistanceThreshold": {
+  "settingLabelDistanceThreshold": {
     "message": "Rörelseavståndströskel",
     "description": "Gesture distance threshold"
   },
-  "settingNameDistanceSensitivity": {
+  "settingLabelDistanceSensitivity": {
     "message": "Rörelsekänslighet",
     "description": "Gesture sensitivity"
   },
-  "settingNameDisplayTrace": {
+  "settingLabelDisplayTrace": {
     "message": "Visa rörelsespår",
     "description": "Display gesture trace"
   },
-  "settingNameTraceColor": {
+  "settingLabelTraceColor": {
     "message": "Radfärg",
     "description": "Line color"
   },
-  "settingNameTraceOpacity": {
+  "settingLabelTraceOpacity": {
     "message": "Genomskinlighet",
     "description": "Opacity"
   },
-  "settingNameTraceWidth": {
+  "settingLabelTraceWidth": {
     "message": "Radbredd",
     "description": "Line width"
   },
-  "settingNameTraceGrowth": {
+  "settingLabelTraceGrowth": {
     "message": "Radtjocklek",
     "description": "Line growth"
   },
-  "settingNameDisplayAction": {
+  "settingLabelDisplayAction": {
     "message": "Visa funktion",
     "description": "Display action"
   },
-  "settingNameActionColor": {
+  "settingLabelActionColor": {
     "message": "Typsnittsfärg",
     "description": "Font color"
   },
-  "settingNameActionBackgroundColor": {
+  "settingLabelActionBackgroundColor": {
     "message": "Bakgrundsfärg",
     "description": "Background color"
   },
-  "settingNameActionBackgroundOpacity": {
+  "settingLabelActionBackgroundOpacity": {
     "message": "Bakgrundsgenomskinlighet",
     "description": "Background opacity"
   },
-  "settingNameActionFontSize": {
+  "settingLabelActionFontSize": {
     "message": "Typsnittsstorlek",
     "description": "Font size"
   },
-  "settingNameDisplayDirections": {
+  "settingLabelDisplayDirections": {
     "message": "Visa rörelseriktning",
     "description": "Display gesture directions"
   },
-  "settingNameDirectionsColor": {
+  "settingLabelDirectionsColor": {
     "message": "Typsnitrsfärg",
     "description": "Font color"
   },
-  "settingNameDirectionsBackgroundColor": {
+  "settingLabelDirectionsBackgroundColor": {
     "message": "Bakgrundsfärg",
     "description": "Background color"
   },
-  "settingNameDirectionsBackgroundOpacity": {
+  "settingLabelDirectionsBackgroundOpacity": {
     "message": "Bakgrundsgenomskinlighet",
     "description": "Background opacity"
   },
-  "settingNameDirectionsFontSize": {
+  "settingLabelDirectionsFontSize": {
     "message": "Typsnittsstorlek",
     "description": "Font size"
   },
-  "settingNameDirectionsTextAlign": {
+  "settingLabelDirectionsTextAlign": {
     "message": "Textjustering",
     "description": "Text alignment"
   },
-  "settingNameDirectionsTextAlignLeft": {
+  "settingLabelDirectionsTextAlignLeft": {
     "message": "vänster",
     "description": "left"
   },
-  "settingNameDirectionsTextAlignRight": {
+  "settingLabelDirectionsTextAlignRight": {
     "message": "höger",
     "description": "right"
   },
-  "settingNameDirectionsTextAlignCenter": {
+  "settingLabelDirectionsTextAlignCenter": {
     "message": "centrerad",
     "description": "center"
   },
@@ -231,79 +231,79 @@
     "message": "Accepterar ett värde mellan 0 (osynligt) och 1 (synligt).",
     "description": "Accepts any value in the range of 0 (invisible) and 1 (visible)."
   },
-  "settingNameRemoveTabFocus": {
+  "settingLabelRemoveTabFocus": {
     "message": "Fokusera på fliken",
     "description": "Focus tab"
   },
-  "settingNameRemoveTabFocusDefault": {
+  "settingLabelRemoveTabFocusDefault": {
     "message": "standard",
     "description": "default"
   },
-  "settingNameRemoveTabFocusPrevious": {
+  "settingLabelRemoveTabFocusPrevious": {
     "message": "föregående",
     "description": "previous"
   },
-  "settingNameRemoveTabFocusRight": {
+  "settingLabelRemoveTabFocusRight": {
     "message": "höger",
     "description": "right"
   },
-  "settingNameRemoveTabFocusLeft": {
+  "settingLabelRemoveTabFocusLeft": {
     "message": "vänster",
     "description": "left"
   },
-  "settingNameNewTabPosition": {
+  "settingLabelNewTabPosition": {
     "message": "Flikposition",
     "description": "Tab position"
   },
-  "settingNameNewTabPositionDefault": {
+  "settingLabelNewTabPositionDefault": {
     "message": "standard",
     "description": "default"
   },
-  "settingNameNewTabPositionBefore": {
+  "settingLabelNewTabPositionBefore": {
     "message": "före",
     "description": "before"
   },
-  "settingNameNewTabPositionAfter": {
+  "settingLabelNewTabPositionAfter": {
     "message": "efter",
     "description": "after"
   },
-  "settingNameZoomStep": {
+  "settingLabelZoomStep": {
     "message": "Zoomsteg",
     "description": "Zoom step"
   },
-  "settingNameHomepageURL": {
+  "settingLabelHomepageURL": {
     "message": "Hemsidans webbadress",
     "description": "Homepage URL"
   },
-  "settingNameScrollDuration": {
+  "settingLabelScrollDuration": {
     "message": "Rullninsvaraktighet",
     "description": "Scroll duration"
   },
-  "settingNameNewTabOnEmptyLink": {
+  "settingLabelNewTabOnEmptyLink": {
     "message": "Öppen tom flik",
     "description": "Open empty tab"
   },
-  "settingNameFocusImageToTab": {
+  "settingLabelFocusImageToTab": {
     "message": "Fokusera på fliken när bilden öppnas",
     "description": "Focus opened image tab"
   },
-  "settingNameRemovePinnedTabs": {
+  "settingLabelRemovePinnedTabs": {
     "message": "Ta bort fästa flikar",
     "description": "Remove pinned tabs"
   },
-  "settingNameSearchEngineURL": {
+  "settingLabelSearchEngineURL": {
     "message": "Sökmotorns webbadress",
     "description": "Search engine URL"
   },
-  "settingNameFocusSearchResult": {
+  "settingLabelFocusSearchResult": {
     "message": "Focusera på sökresultatet",
     "description": "Focus search result"
   },
-  "settingNamePromptSaveImageAs": {
+  "settingLabelPromptSaveImageAs": {
     "message": "Visa Spara som",
     "description": "Prompt Save As"
   },
-  "settingNameFirstTabIncludePinned": {
+  "settingLabelFirstTabIncludePinned": {
     "message": "Inkludera fästa flikar",
     "description": "Include pinned tabs"
   },
@@ -363,255 +363,255 @@
     "message": "Endast en rörelse per åtgärd kan användas. Rörelsekoderna består av U - upp, D - ner, R - höger, L - vänster och kan inte innehålla samma riktning två gånger i rad, som till exempel RR.",
     "description": "Only one gesture per action can be used. The gesture codes are composed of U - up, D - down, R - right, L - left and cannot contain the same direction twice in a row, as for example RR."
   },
-  "commandNameBookmark": {
+  "commandLabelBookmark": {
     "message": "Växla bokmärke",
     "description": "Toggle bookmark"
   },
-  "commandNameDuplicate": {
+  "commandLabelDuplicate": {
     "message": "Duplicera flik",
     "description": "Duplicate tab"
   },
-  "commandNameNewTab": {
+  "commandLabelNewTab": {
     "message": "Ny flik",
     "description": "New tab"
   },
-  "commandNameReload": {
+  "commandLabelReload": {
     "message": "Uppdatera",
     "description": "Reload"
   },
-  "commandNameReloadCache": {
+  "commandLabelReloadCache": {
     "message": "Uppdatera cache",
     "description": "Reload cache"
   },
-  "commandNameStopLoading": {
+  "commandLabelStopLoading": {
     "message": "Sluta ladda",
     "description": "Stop loading"
   },
-  "commandNameRemove": {
+  "commandLabelRemove": {
     "message": "Stäng flik",
     "description": "Remove tab"
   },
-  "commandNameRestore": {
+  "commandLabelRestore": {
     "message": "Återställ flik",
     "description": "Restore tab"
   },
-  "commandNameZoomIn": {
+  "commandLabelZoomIn": {
     "message": "Zooma in",
     "description": "Zoom in"
   },
-  "commandNameZoomOut": {
+  "commandLabelZoomOut": {
     "message": "Zooma ut",
     "description": "Zoom out"
   },
-  "commandNameZoomReset": {
+  "commandLabelZoomReset": {
     "message": "Återställ zoomnivå",
     "description": "Zoom reset"
   },
-  "commandNameBack": {
+  "commandLabelBack": {
     "message": "Gå bakåt en sida",
     "description": "Page back"
   },
-  "commandNameForth": {
+  "commandLabelForth": {
     "message": "Gå framåt en sida",
     "description": "Page forward"
   },
-  "commandNamePin": {
+  "commandLabelPin": {
     "message": "Växla fäst flik",
     "description": "Toggle pinned tab"
   },
-  "commandNameMute": {
+  "commandLabelMute": {
     "message": "Växla ljud",
     "description": "Toggle mute"
   },
-  "commandNameScrollTop": {
+  "commandLabelScrollTop": {
     "message": "Rulla till toppen",
     "description": "Scroll to the top"
   },
-  "commandNameScrollBottom": {
+  "commandLabelScrollBottom": {
     "message": "Rulla till botten",
     "description": "Scroll to the bottom"
   },
-  "commandNameScrollPageDown": {
+  "commandLabelScrollPageDown": {
     "message": "Rulla en sida ner",
     "description": "Scroll page down"
   },
-  "commandNameScrollPageUp": {
+  "commandLabelScrollPageUp": {
     "message": "Rulla en sida upp",
     "description": "Scroll page up"
   },
-  "commandNameNext": {
+  "commandLabelNext": {
     "message": "Nästa flik",
     "description": "Next tab"
   },
-  "commandNamePrevious": {
+  "commandLabelPrevious": {
     "message": "Föregående flik",
     "description": "Previous tab"
   },
-  "commandNameFirstTab": {
+  "commandLabelFirstTab": {
     "message": "Första fliken",
     "description": "First tab"
   },
-  "commandNameLastTab": {
+  "commandLabelLastTab": {
     "message": "Sista fliken",
     "description": "Last tab"
   },
-  "commandNamePreviousSelectedTab": {
+  "commandLabelPreviousSelectedTab": {
     "message": "Föregående vald flik",
     "description": "Previous selected tab"
   },
-  "commandNameMaximize": {
+  "commandLabelMaximize": {
     "message": "Maximera fönstret",
     "description": "Maximize window"
   },
-  "commandNameMinimize": {
+  "commandLabelMinimize": {
     "message": "Minimera fönstret",
     "description": "Minimize window"
   },
-  "commandNameToggleWindowSize": {
+  "commandLabelToggleWindowSize": {
     "message": "Växla fönsterstorlek",
     "description": "Toggle window size"
   },
-  "commandNameFullscreen": {
+  "commandLabelFullscreen": {
     "message": "Växla fullskärm",
     "description": "Toggle full screen"
   },
-  "commandNameNewWindow": {
+  "commandLabelNewWindow": {
     "message": "Nytt fönster",
     "description": "New window"
   },
-  "commandNameNewPrivateWindow": {
+  "commandLabelNewPrivateWindow": {
     "message": "Nytt privat fönster",
     "description": "New private window"
   },
-  "commandNameTabToWindow": {
+  "commandLabelTabToWindow": {
     "message": "Flik till fönster",
     "description": "Tab to window"
   },
-  "commandNameCloseWindow": {
+  "commandLabelCloseWindow": {
     "message": "Stäng fönster",
     "description": "Close window"
   },
-  "commandNameReloadAll": {
+  "commandLabelReloadAll": {
     "message": "Uppdatera alla",
     "description": "Reload all"
   },
-  "commandNameReloadAllCaches": {
+  "commandLabelReloadAllCaches": {
     "message": "Uppdatera alla caches",
     "description": "Reload all caches"
   },
-  "commandNameURLLevelUp": {
+  "commandLabelURLLevelUp": {
     "message": "Upp i webbadressens hierarki",
     "description": "URL hierarchy up"
   },
-  "commandNameIncreaseURLNumber": {
+  "commandLabelIncreaseURLNumber": {
     "message": "Ökar webbadressens nummer",
     "description": "Increase URL number"
   },
-  "commandNameDecreaseURLNumber": {
+  "commandLabelDecreaseURLNumber": {
     "message": "Minskar webbadressens nummer",
     "description": "Decrease URL number"
   },
-  "commandNameImageToTab": {
+  "commandLabelImageToTab": {
     "message": "Bild till flik",
     "description": "Image to tab"
   },
-  "commandNameLinkToForegroundTab": {
+  "commandLabelLinkToForegroundTab": {
     "message": "Länk till förgrundsflik",
     "description": "Link to foreground tab"
   },
-  "commandNameLinkToBackgroundTab": {
+  "commandLabelLinkToBackgroundTab": {
     "message": "Länk till bakgrundsflik",
     "description": "Link to background tab"
   },
-  "commandNameLinkToWindow": {
+  "commandLabelLinkToWindow": {
     "message": "Länk till fönster",
     "description": "Link to window"
   },
-  "commandNameLinkToPrivateWindow": {
+  "commandLabelLinkToPrivateWindow": {
     "message": "Länk till privat fönster",
     "description": "Link to private window"
   },
-  "commandNameSearchSelection": {
+  "commandLabelSearchSelection": {
     "message": "Sök markerad text",
     "description": "Search selected text"
   },
-  "commandNameRemoveRight": {
+  "commandLabelRemoveRight": {
     "message": "Stäng flikar till höger",
     "description": "Remove right tabs"
   },
-  "commandNameRemoveLeft": {
+  "commandLabelRemoveLeft": {
     "message": "Stäng flikar till vänster",
     "description": "Remove left tabs"
   },
-  "commandNameRemoveOther": {
+  "commandLabelRemoveOther": {
     "message": "Stäng alla andra flikar",
     "description": "Remove other tabs"
   },
-  "commandNameSaveAsPDF": {
+  "commandLabelSaveAsPDF": {
     "message": "Spara som PDF",
     "description": "Save as PDF"
   },
-  "commandNameSaveImage": {
+  "commandLabelSaveImage": {
     "message": "Spara bild",
     "description": "Save image"
   },
-  "commandNamePrint": {
+  "commandLabelPrint": {
     "message": "Skriv ut",
     "description": "Print"
   },
-  "commandNamePrintPreview": {
+  "commandLabelPrintPreview": {
     "message": "Förhandsgranska utskrift",
     "description": "Print preview"
   },
-  "commandNameOpenHomepage": {
+  "commandLabelOpenHomepage": {
     "message": "Öppna hemsida",
     "description": "Open homepage"
   },
-  "commandNameOpenAddonSettings": {
+  "commandLabelOpenAddonSettings": {
     "message": "Öppna Gesturefy-inställningar",
     "description": "Open Gesturefy settings"
   },
-  "commandNameOpenLink": {
+  "commandLabelOpenLink": {
     "message": "Öppna länk",
     "description": "Open link"
   },
-  "commandNameOpenImage": {
+  "commandLabelOpenImage": {
     "message": "Öppna bild",
     "description": "Open image"
   },
-  "commandNameLinkToBookmark": {
+  "commandLabelLinkToBookmark": {
     "message": "Länka till bokmärke",
     "description": "Link to bookmark"
   },
-  "commandNameSaveScreenshot": {
+  "commandLabelSaveScreenshot": {
     "message": "Spara skärmbild",
     "description": "Save screenshot"
   },
-  "commandNameCopyTabURL": {
+  "commandLabelCopyTabURL": {
     "message": "Kopiera flikens webbadress",
     "description": "Copy tab URL"
   },
-  "commandNameCopyLinkURL": {
+  "commandLabelCopyLinkURL": {
     "message": "Kopiera länkens webbadress",
     "description": "Copy link URL"
   },
-  "commandNameCopyTextSelection": {
+  "commandLabelCopyTextSelection": {
     "message": "Kopiera markerad text",
     "description": "Copy text selection"
   },
-  "commandNameCopyImage": {
+  "commandLabelCopyImage": {
     "message": "Kopiera bild",
     "description": "Copy image"
   },
-  "commandNameViewPageSourceCode": {
+  "commandLabelViewPageSourceCode": {
     "message": "Visa källkod",
     "description": "View page source"
   },
-  "commandNamePopupAllTabs": {
+  "commandLabelPopupAllTabs": {
     "message": "[Popup] Alla flikar",
     "description": "[Popup] All tabs"
   },
-  "commandNamePopupRecentlyClosedTabs": {
+  "commandLabelPopupRecentlyClosedTabs": {
     "message": "[Popup] Nyligen stängda flikar",
     "description": "[Popup] Recently closed tabs"
   },
@@ -867,15 +867,15 @@
     "message": "Öppnas ett fönster som innehåller en lista över tidigare stängda flikar och låter dig återställa en av dem.",
     "description": "Opens a popup containing a list of all recently closed tabs and offers the possibility to restore one of them."
   },
-  "extraNameRockerActive": {
+  "extraLabelRockerActive": {
     "message": "Musknappsrörelse",
     "description": "Rocker gesture"
   },
-  "extraNameRockerRightMouseClick": {
+  "extraLabelRockerRightMouseClick": {
     "message": "Höger musklick",
     "description": "Right mouse click"
   },
-  "extraNameRockerLeftMouseClick": {
+  "extraLabelRockerLeftMouseClick": {
     "message": "Vänster musklick",
     "description": "Left mouse click"
   },
@@ -883,19 +883,19 @@
     "message": "Denna rörelse utförs antingen genom att hålla höger musknapp nertryckt och klicka på vänster eller tvärtom.",
     "description": "This gesture is performed either by holding the right mouse button and clicking the left or vice versa."
   },
-  "extraNameWheelActive": {
+  "extraLabelWheelActive": {
     "message": "Musrörelse",
     "description": "Wheel gesture"
   },
-  "extraNameWheelMouseButton": {
+  "extraLabelWheelMouseButton": {
     "message": "Hjulrörelse musknapp",
     "description": "Wheel gesture mouse button"
   },
-  "extraNameWheelUp": {
+  "extraLabelWheelUp": {
     "message": "Hjul uppåt",
     "description": "Wheel up"
   },
-  "extraNameWheelDown": {
+  "extraLabelWheelDown": {
     "message": "Hjul neråt",
     "description": "Wheel down"
   },
